--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,40 @@
+# Node.js dependencies
 node_modules/
-word_files/
-text_files/
+media/
+
+# Log files
+logs/
+*.log
+
+# Environment variables
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Build output
+dist/
+build/
+
+# Temporary files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# OS-specific files
+.DS_Store
+Thumbs.db
+
+# Coverage directory used by tools like istanbul
+coverage/
+
+# IDE or editor specific files
+.idea/
+.vscode/
+*.sublime-project
+*.sublime-workspace
+
+# Other files
+*.tgz
+*.zip
