--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "mammoth": "^1.8.0",
     "mongodb": "6.10",
     "node-fetch": "^2.7.0",
+    "pg": "^8.13.1",
+    "pg-hstore": "^2.3.4",
+    "sequelize": "^6.37.5",
     "telegraf": "^4.16.3",
     "telegraf-session-mongodb": "^2.0.2"
   }
