--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "pg-hstore": "^2.3.4",
     "sequelize": "^6.37.5",
     "telegraf": "^4.16.3",
-    "telegraf-session-mongodb": "^2.0.2"
+    "telegraf-session-mongodb": "^2.0.2",
+    "winston": "^3.17.0"
   }
 }
