--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "express": "^4.21.1",
     "mammoth": "^1.8.0",
     "mongodb": "6.10",
+    "multer": "^1.4.5-lts.1",
     "node-fetch": "^2.7.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
