added content of files

--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-BOT_TOKEN=7583041475:AAE3tyiRqFTJkoboiFUPu8dWKkbF8XCONZ0
-DB_USER=postgres
-DB_PASSWORD=abbos2504
-DB_HOST="127.0.0.1"
-DB_PORT=5432
-DB_NAME=apdb
-WEBHOOK_URL="https://3538-95-46-70-192.ngrok-free.app/webhook"
+BOT_TOKEN='5113351648:AAGdOh_9cDm_YsaE1o5DBvd8OAJUwForL2k'
+DB_USER='postgres'
+DB_PASSWORD='123456'
+DB_NAME='apdb'
+DB_HOST='localhost'
+DB_PORT='5432'
+WEBHOOK_URL="https://apdb.jprq.site/webhook"
 COPYLEAKS_EMAIL="shodiev.s.a@gmail.com"
 COPYLEAKS_API_KEY="8ecb5890-f3b6-4b3e-baec-a65b1e0d362c"
