--- a/.env
+++ b/.env
@@ -4,6 +4,6 @@ DB_PASSWORD=abbos2504
 DB_HOST="127.0.0.1"
 DB_PORT=5432
 DB_NAME=apdb
-WEBHOOK_URL="https://3538-95-46-70-192.ngrok-free.app/webhook"
+WEBHOOK_URL="https://dd80-95-46-70-192.ngrok-free.app/webhook"
 COPYLEAKS_EMAIL="shodiev.s.a@gmail.com"
 COPYLEAKS_API_KEY="8ecb5890-f3b6-4b3e-baec-a65b1e0d362c"
