--- a/package.json
+++ b/package.json
@@ -10,19 +10,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@telegraf/session": "^2.0.0-beta.7",
+    "date-fns": "^4.1.0",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
-    "mammoth": "^1.8.0",
-    "mongodb": "6.10",
-    "multer": "^1.4.5-lts.1",
-    "node-fetch": "^2.7.0",
     "pg": "^8.13.1",
     "pg-hstore": "^2.3.4",
     "plagiarism-checker": "^4.1.0",
     "sequelize": "^6.37.5",
     "telegraf": "^4.16.3",
-    "telegraf-session-mongodb": "^2.0.2",
     "winston": "^3.17.0"
   }
 }
